# osearch

./: .clang-tidy  .gitignore  .hgignore  CMakeLists.txt  Doxyfile  Makefile  README.md  RESULTS.md  StringConstant.h  TODO.md  aggregate.sh  annotate.sh  assume.hh  compile.cc  compile.hh  compile.mk  contract.cc  deptree.txt  execute.cc  execute.hh  flat_map.hh  getopts.cc  getopts.hh  main.cc  main.mk  makefile  measure.cc  measure.hh  measure.mk  modules-gcc-7.2.1.map  modules.map  ninja.sh  obj.cc  obj.hh  point.cc  point.hh  print.cc  print.hh  read_conf.cc  read_conf.hh  (+5 more)
.github/workflows/: ci.yml
benchmarks/: Makefile  almabench.c  distbench.c  evobench.c  fftbench.c  huffbench.c  linbench.c  linsmall.c  main.ic  mat1bench.c  treebench.c
config/: clang22-test.osearch  clang22.osearch  gcc16-size.osearch  gcc16-test.osearch  gcc16.osearch  gcc43_athlon_xp_nofm.acovea  gcc43_full.osearch  gcc48-test.osearch  gcc48.osearch  llvm-gcc40.osearch  llvm-gcc40_core2_mini.acovea  llvm-gcc40_mini.osearch
scripts/: aggregate.sh  annotate.py  annotate.sh  cc-pgo.sh  test.sh
src/: EMBEDDED-CHECK.md  compat.hh  compile.cc  getopts.cc  main.cc  measure.cc  my_rand.cc  my_rand.hh  obj.hh  point.cc  point.hh  print.cc  read_conf.cc  read_conf.hh  search.cc  search.hh  steps.cc
tests/: check.hh  test_flat_map.cc  test_measure.cc  test_obj_static.cc  test_point.cc  test_read_conf.cc  test_steps.cc
tmp/: O0.opt  O1.opt  O2.opt  O3.opt  Os.opt
